@@ -6,7 +6,7 @@ ACLOCAL_AMFLAGS = -I m4
 AM_CPPFLAGS = -I. -I$(top_srcdir) -I$(top_srcdir)/lib
 AM_CFLAGS = @fastjar_warn_cflags@
 AM_LDFLAGS = -no-undefined
-LDADD = $(ZLIBS) lib/libgnu.la libfastjar_convenience.la 
+LDADD = lib/libgnu.la libfastjar_convenience.la $(ZLIBS)
 
 bin_PROGRAMS = fastjar grepjar
 
